[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Water/Water.shader" type="Shader" id=1]
[ext_resource path="res://assets/Water/Water_Body.gd" type="Script" id=2]
[ext_resource path="res://assets/Water/smooth_path_modified.gd" type="Script" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/tint = Color( 0.498039, 0.788235, 1, 0.6 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array(  )
}

[node name="Water_Body" type="Node2D"]
script = ExtResource( 2 )
spring_number = 38
border_thickness = 0.0

[node name="Water_Polygon" type="Polygon2D" parent="."]
material = SubResource( 1 )
color = Color( 0.309804, 0.545098, 0.647059, 0.152941 )
antialiased = true

[node name="Water_Border" type="Path2D" parent="."]
self_modulate = Color( 1, 1, 1, 1 )
curve = SubResource( 2 )
script = ExtResource( 3 )
spline_length = 2
color = Color( 0.498039, 0.788235, 1, 0.6 )

[node name="Water_Body_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water_Body_Area"]
modulate = Color( 1, 0, 0, 1 )

[connection signal="body_entered" from="Water_Body_Area" to="." method="_on_Water_Body_Area_body_entered"]
